IaC/k8s/service-gateway-timeout.yaml
#
# SFU CMPT 756.203
#
# k8s yaml to deploy a service:
#   1 Gateway - this is the point of control for what goes in or out of the
#     cluster
#   1 VirtualService - this opens up the logic
#
# Notes:
#
# 1. the Gateway's .spec.servers.port.number is where istio will serve the API.
#    This means that you can move the service around publically irrespective of
#    the actual implementation.
# 2. Deployment's .spec.http.match.uri & .rewrite.uri allows you to publish/implement
#    a public API path while routing to a private/legacy path.
#
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: termproject
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/biller
    rewrite:
      uri: /api/v1/biller
    route:
    - destination:
        host: billercontainer
        port:
          number: 5001
  - match:
    - uri:
        prefix: /api/v1/bill
    rewrite:
      uri: /api/v1/bill
    route:
    - destination:
        host: billcontainer
        port:
          number: 5002
  - match:
    - uri:
        prefix: /api/v1/user
    rewrite:
      uri: /api/v1/user
    route:
    - destination:
        host: usercontainer
        port:
          number: 5003
    timeout: 0.5s
